# wxpolygon

./: CMakeLists.txt  Makefile.in  README.md  configure.ac  make-appimage.pl  myConfig.cpp  myConfig.h  myPropertyDialog.cpp  myPropertyDialog.h  strutil.cpp  strutil.h  wxpolygon.conf  wxpolygon.cpp  wxpolygon.iss  wxpolygon.rc  wxpolygon.xpm  wxwin.m4
